test/expected/cli/unknown_flag_context.out
== builtin unknown flag carries the Builtin prefix:
shit: 1:8: error: Builtin 'enable': Unknown flag '--badflag'.
     1 |  enable --badflag
       |         ^~~~~~~~~ here.
== shitbox unknown flag carries the shitbox util prefix:
shit: 1:12: error: shitbox ls: Unknown flag '--dasdas'.
     1 |  shitbox ls --dasdas
       |             ^~~~~~~~ here.
